--- a/generic.html
+++ b/generic.html
@@ -1,63 +1,69 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <title>My Rowing Journey - Zaeem Zia</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
-			</header>
+<!-- Header -->
+<header id="header">
+    <div class="inner">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="rowing-journey.html">Rowing Journey</a></li>
+                <!-- Other links -->
+            </ul>
+        </nav>
+    </div>
+</header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<!-- Main Content -->
+<section id="rowing-journey" class="wrapper style1 fade-up">
+    <div class="inner">
+        <h1>From Non-Rower to College Rower: My Journey</h1>
+        <p><strong>Introduction:</strong> My journey into rowing began with no prior experience. As a freshman in college, I decided to join the rowing team, unaware of the challenges and triumphs that lay ahead.</p>
+        
+        <h2>Getting Started</h2>
+        <p>When I first joined the team, I had little knowledge of the sport. I was introduced to the basics of rowing, including techniques, terminology, and the physical demands of the sport. The initial training sessions were both exciting and intimidating.</p>
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</section>
+        <h2>The Challenges</h2>
+        <p>Transitioning from a non-rower to a competitive athlete was challenging. I faced difficulties with technique, endurance, and strength. Long practice sessions, early mornings, and rigorous workouts became part of my routine. Despite the hardships, I remained determined and focused on improving.</p>
 
-			</div>
+        <h2>Achievements and Milestones</h2>
+        <p>With dedication and hard work, I started to see improvements. I participated in various regattas and competitions, each time learning more and pushing my limits. One of the significant milestones was my first race, where I felt the culmination of my training and efforts.</p>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+        <h2>Reflections</h2>
+        <p>Looking back, my journey from a non-rower to a college rower has been incredibly rewarding. It taught me discipline, perseverance, and the value of teamwork. Rowing became more than just a sport; it became a part of my identity and a source of personal growth.</p>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+        <h2>Future Goals</h2>
+        <p>As I continue my rowing career, my goals include further improving my technique, competing in more challenging events, and contributing to the team’s success. I am excited about the future and the opportunities rowing will bring.</p>
+    </div>
+</section>
 
-	</body>
+<!-- Footer -->
+<footer id="footer" class="wrapper style1-alt">
+    <div class="inner">
+        <ul class="menu">
+            <li>&copy; Zaeem Zia. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </div>
+</footer>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
